--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -10,6 +10,9 @@ jobs:
     container:
       image: debian:bookworm
     steps:
+    - name: Setup environment
+      run: apt-get install -y --no-install-recommends cmake
+      
     - uses: actions/checkout@v3
 
     - name: Configure CMake
