--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -11,7 +11,7 @@ jobs:
       image: debian:bookworm
     steps:
     - name: Setup environment
-      run: apt update && apt install -y --no-install-recommends cmake
+      run: apt update && apt install -y --no-install-recommends cmake git ninja
       
     - uses: actions/checkout@v3
 
