--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -11,7 +11,7 @@ jobs:
       image: debian:bookworm
     steps:
     - name: Setup environment
-      run: apt update && apt install -y --no-install-recommends ca-certificates cmake git ninja-build g++
+      run: apt update && apt install -y --no-install-recommends ca-certificates cmake git ninja-build g++ pkgconf libsystemd-dev
       
     - uses: actions/checkout@v3
 
