--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -13,7 +13,7 @@ jobs:
       CXXFLAGS: --coverage
     steps:
       - name: Setup environment
-        run: apt update && apt install -y --no-install-recommends ca-certificates cmake git ninja-build g++ pkgconf xsltproc docbook-xsl libusb-1.0-0-dev libfuse3-dev libcjson-dev libsdl2-dev libsdl2-ttf-dev libsystemd-dev libx11-dev libicu-dev libwayland-dev libxkbcommon-dev zlib1g-dev libssl-dev libasound2-dev libpulse-dev libcups2-dev libpcsclite-dev libavcodec-dev libavdevice-dev libavfilter-dev libavformat-dev libavutil-dev libpostproc-dev libswresample-dev libswscale-dev libpkcs11-helper1-dev krb5-multidev heimdal-multidev
+        run: sudo apt update && sudo apt install -y --no-install-recommends ca-certificates cmake git ninja-build g++ pkgconf xsltproc docbook-xsl libusb-1.0-0-dev libfuse3-dev libcjson-dev libsdl2-dev libsdl2-ttf-dev libsystemd-dev libx11-dev libicu-dev libwayland-dev libxkbcommon-dev zlib1g-dev libssl-dev libasound2-dev libpulse-dev libcups2-dev libpcsclite-dev libavcodec-dev libavdevice-dev libavfilter-dev libavformat-dev libavutil-dev libpostproc-dev libswresample-dev libswscale-dev libpkcs11-helper1-dev krb5-multidev heimdal-multidev
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
