--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -19,6 +19,7 @@ jobs:
           fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
       - uses: actions/setup-java@v4
         with:
+          distribution: 'temurin' 
           java-version: '17'
       - name: Set up Python 3.8 for gcovr
         uses: actions/setup-python@v4
