--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -52,4 +52,5 @@ jobs:
         run: |
           sonar-scanner -X \
             --define sonar.cfamily.compile-commands="${{ env.BUILD_WRAPPER_OUT_DIR }}/compile_commands.json" \
-            --define sonar.coverageReportPaths=build/coverage.xml
+            --define sonar.coverageReportPaths=build/coverage.xml \
+            --define sonar.scanner.skipJreProvisioning=true
