--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -41,12 +41,8 @@ jobs:
         working-directory: build
         run: |
           gcovr --sonarqube > coverage.xml
-      - name: Run sonar-scanner
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONARCLOUD_TOKEN }} # Put the name of your token here
-        run: |
-          sonar-scanner -X \
-            --define sonar.cfamily.compile-commands="${{ env.BUILD_WRAPPER_OUT_DIR }}/compile_commands.json" \
-            --define sonar.coverageReportPaths=build/coverage.xml \
-            --define sonar.scanner.skipJreProvisioning=true
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
