--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -17,10 +17,6 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
-      - uses: actions/setup-java@v4
-        with:
-          distribution: 'temurin' 
-          java-version: '17'
       - name: install gcovr 5.0
         run: |
           pip install gcovr==5.0 # 5.1 is not supported
@@ -37,6 +33,10 @@ jobs:
       - name: Get coverage
         working-directory: build
         run: ctest -T coverage .
+      - name: test
+        run: |
+          rm -rf .sonar
+          ls -la .
       - name: Collect coverage into one XML report
         working-directory: build
         run: |
