--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
 sonar.projectKey=tpambor_FreeRDP
 sonar.organization=tpambor
-sonar.exclusions=build
+sonar.exclusions=build,build_wrapper_output_directory,client/Android
 sonar.coverageReportPaths=build/coverage.xml
