--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,3 +2,4 @@ sonar.projectKey=tpambor_FreeRDP
 sonar.organization=tpambor
 sonar.exclusions=**/build/**,**/build_wrapper_output_directory/**,**/client/Android/**
 sonar.coverageReportPaths=build/coverage.xml
+sonar.cfamily.compile-commands=build_wrapper_output_directory/compile_commands.json
