--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,3 +3,4 @@ sonar.organization=tpambor
 sonar.exclusions=**/build/**,**/build_wrapper_output_directory/**,**/client/Android/**
 sonar.coverageReportPaths=build/coverage.xml
 sonar.cfamily.compile-commands=build_wrapper_output_directory/compile_commands.json
+sonar.sources=.
