--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.projectKey=tpambor_FreeRDP
 sonar.organization=tpambor
-sonar.exclusions=**/build/**,**/build_wrapper_output_directory/**,**/client/Android/**
+sonar.exclusions=**/build/**,**/client/Android/**
 sonar.coverageReportPaths=build/coverage.xml
-sonar.cfamily.compile-commands=build_wrapper_output_directory/compile_commands.json
+sonar.cfamily.compile-commands=build/compile_commands.json
 sonar.sources=.
