--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,5 @@
 sonar.projectKey=tpambor_FreeRDP
 sonar.organization=tpambor
-sonar.exclusions=**/build/**,**/client/Android/**
+sonar.exclusions=**/client/Android/**
 sonar.coverageReportPaths=build/coverage.xml
 sonar.cfamily.compile-commands=build/compile_commands.json
-sonar.sources=.
